--- a/views/user_sign_up.ejs
+++ b/views/user_sign_up.ejs
@@ -1,5 +1,5 @@
 
-</form><section class="section-one">
+<section class="section-one">
     <!-- do not remove this. this is the background -->
 
 </section>
@@ -8,7 +8,7 @@
     <h1 class="text-center font-weight-bold sign-up-logo pb-2">Sign Up</h1>
     <div class="row align-items-center">
         <div class="col-sm-8 offset-sm-2">
-            <form action="/users/create" method="POST">
+            <form myfunc() action="/users/create" method="POST">
                 <div class="form-group">
                     <label for="InputName">Name</label>
                     <input type="text" class="form-control" id="InputName" name="name" required>
@@ -23,6 +23,7 @@
                 <div class="form-group">
                     <label for="InputPassword">Password</label>
                     <input type="password" class="form-control" id="InputPassword" required name="password">
+              
                 </div>
                 <div class="form-group">
                     <label for="confirmPassword">Confirm Password</label>
