--- a/assets/scss/layout.scss
+++ b/assets/scss/layout.scss
@@ -3,6 +3,7 @@ body
     height:100vh;
     margin:0px;
     padding:0px;
+    box-sizing: border-box;
     #layout-main
     {
         min-height:100vh;
