--- a/views/home.ejs
+++ b/views/home.ejs
@@ -61,6 +61,7 @@
         </script>
         <%}%>
     
-
+        <div id="fb-root"></div>
+        <script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_GB/sdk.js#xfbml=1&version=v11.0&appId=114347214074574&autoLogAppEvents=1" nonce="AhfmZdWW"></script>
 
   
