--- a/views/user_sign_in.ejs
+++ b/views/user_sign_in.ejs
@@ -35,6 +35,13 @@
                 </div>
             </div>
         </div>
+        <div class="text-right">
+            <div class="d-inline-block">Or Login using :</div>
+            <div class="d-inline-block">
+                <a type="button" href="/users/auth/facebook" class="btn btn-light text-blue "><i class="fab fa-facebook"></i></a>
+            </div>
+        </div>
+    </div>
       
   
         </div>
